feat: Phase 11a - clj-kondo library integration + XTDB/Malli fixes
Phase 11a: Unified Analysis Pipeline
- Replace CLI clj-kondo with clj-kondo.core/run! library calls
- Analysis time ~40ms per file (no subprocess overhead)
- Add clj-kondo as git submodule at v2025.12.23

XTDB Transaction Fix:
- Switch from :put-docs XTQL to SQL INSERT in context.clj
- XTDB v2.1.0-rc0 has bug with :put-docs operations
- Update node.clj docstrings to document the workaround

Malli Registry Fix:
- Add ensure-registry-sync! in verify.clj
- Use mi/clj-collect! instead of macro for dynamic namespaces
- Fixes "register-function-schema" errors in generative tests

Hook improvements:
- Add require before calling process-hook-event!
- Clean up error handling

All 293 tests pass.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>